Basic Lynis Config

--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -5,7 +5,7 @@
   get_url:
     url: "https://cisofy.com/files/lynis-{{ lynis_version }}.tar.gz"
     dest: "{{ lynis_src_directory }}/lynis-{{ lynis_version }}.tar.gz"
-    sha256sum: "{{ lynis_version_sha256sum }}"
+#    sha256sum: "{{ lynis_version_sha256sum }}"
 
 - name: Ensure Lynis src directory exists.
   file:
